--- a/WebApplicationlaptop/appsettings.json
+++ b/WebApplicationlaptop/appsettings.json
@@ -24,7 +24,7 @@
     "PartnerCode": "MOMO",
     "RequestType": "captureMoMoWallet" //payWithATM //captureMoMoWallet
   },
-  //gollle
+  //google
   "GoogleKeys": {
     "ClientId": "410833810805-qnh2hbg25icp5kmbefru166bjt3fen3h.apps.googleusercontent.com",
     "ClientSecret": "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"
